fix mobile horizontal scroll issue

--- a/client/src/Components/HeroSlider.css
+++ b/client/src/Components/HeroSlider.css
@@ -1,7 +1,7 @@
-html {
+html,
+body {
   background: #000;
   color: #fff;
-  overflow-x: hidden;
 }
 
 .slides {
@@ -69,7 +69,7 @@ html {
   top: 25%;
   transition: opacity 0.3s;
   opacity: 0.7;
-  z-index: 5;
+  z-index: 1;
 }
 
 .slides > button:hover {
